// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders 1`] = `
<div
  className={null}
>
  <div
    className="box paddingX8 paddingY4 whiteBg"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap2 itemsCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 itemsCenter xsDirectionRow"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap4 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders primary action 1`] = `
<div
  className={null}
>
  <div
    className="box paddingX8 paddingY4 whiteBg"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap2 itemsCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 itemsCenter xsDirectionRow"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap4 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="FlexItem"
            >
              <div
                className="box mdDisplayBlock xsDisplayNone"
              >
                <div
                  className="Flex rowGap2 xsDirectionRow"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box itemsCenter xsDisplayFlex"
                      style={
                        Object {
                          "height": 48,
                        }
                      }
                    >
                      <button
                        className="button hideOutline inline accessibilityOutline parentButton"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          className="button hideOutline inline accessibilityOutline tapTransition lg red enabled childrenDiv"
                        >
                          <div
                            className="Text fontSize300 white alignCenter fontWeightBold"
                          >
                            Create
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box mdDisplayNone xsDisplayBlock"
              >
                <button
                  aria-controls="pageheader-dropdown"
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="test"
                  className="parentButton"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <div
                    className="button tapTransition enabled"
                  >
                    <div
                      className="Text fontSize300 inverseText alignCenter fontWeightBold"
                    >
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="icon darkGray iconBlock"
                        height={20}
                        role="img"
                        viewBox="0 0 24 24"
                        width={20}
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders secondary action 1`] = `
<div
  className={null}
>
  <div
    className="box paddingX8 paddingY4 whiteBg"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap2 itemsCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 itemsCenter xsDirectionRow"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap4 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="FlexItem"
            >
              <div
                className="box mdDisplayBlock xsDisplayNone"
              >
                <div
                  className="Flex rowGap2 xsDirectionRow"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box itemsCenter xsDisplayFlex"
                      style={
                        Object {
                          "height": 48,
                        }
                      }
                    >
                      <a
                        className="link hideOutline tapTransition rounding0 block hoverUnderline accessibilityOutline"
                        href="www.pinterest.com"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        rel=""
                        target={null}
                      >
                        Help center
                      </a>
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box itemsCenter xsDisplayFlex"
                      style={
                        Object {
                          "height": 48,
                        }
                      }
                    >
                      <button
                        className="button hideOutline inline accessibilityOutline parentButton"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          className="button hideOutline inline accessibilityOutline tapTransition lg red enabled childrenDiv"
                        >
                          <div
                            className="Text fontSize300 inverseText alignCenter fontWeightBold"
                          >
                            Create
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box mdDisplayNone xsDisplayBlock"
              >
                <button
                  aria-controls="pageheader-dropdown"
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="test"
                  className="parentButton"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <div
                    className="button tapTransition enabled"
                  >
                    <div
                      className="pog transparent"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    >
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="icon darkGray iconBlock"
                        height={20}
                        role="img"
                        viewBox="0 0 24 24"
                        width={20}
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders subtext 1`] = `
<div
  className={null}
>
  <div
    className="box paddingX8 paddingY4 whiteBg"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap2 xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 itemsCenter xsDirectionRow"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box smDisplayBlock xsDisplayNone"
                    >
                      <span
                        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                      >
                        5 followers

                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap4 xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders within a max width 1`] = `
<div
  className={null}
>
  <div
    className="box paddingX8 paddingY4 whiteBg"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "60%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap2 xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 itemsCenter xsDirectionRow"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 darkGray alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box smDisplayBlock xsDisplayNone"
                    >
                      <span
                        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                      >
                        5 followers

                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap4 xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
